--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,9 @@ description:         Please see the README on GitHub at <https://github.com/gabo
 
 dependencies:
 - base >= 4.7 && < 5
+- brick
 - containers
+- vty
 
 library:
   source-dirs: src
