--- a/package.yaml
+++ b/package.yaml
@@ -36,7 +36,7 @@ library:
   source-dirs: src
 
 executables:
-  lambda-terminal-exe:
+  lambda-terminal:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
